# smartfzf-cpp

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  main.cc  smartfzf.cc~
include/: fs.h  input.h  renderer.h  smartfzf.h  tests.h
src/: fs.cc  index.h  input.cc  main.cc  renderer.cc  smartfzf.cc  tests.cc
test/: test_filesystem.cc  test_smartfzf.cc
zsh/: smartfzf.sh
